objects/rh2__PS_Use_Case_Library__mdt.object
<CustomObject>
    <fields>
        <fullName>rh2__Components_Included__c</fullName>
        <label>Components Included</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__FieldType__c</fullName>
        <label>FieldType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rollup Helper Use Case Library</label>
    <pluralLabel>Rollup Helper Use Case Libraries</pluralLabel>
</CustomObject>